--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^0.18.1",
     "core-js": "^3.6.5",
     "jwt-decode": "^3.1.2",
-    "quasar": "^1.0.0"
+    "quasar": "^1.0.0",
+    "vuelidate": "^0.7.6"
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0",
